# lvgl-sim

./: CMakeLists.txt  README.md  main.c
